Specter (TOU-R Phantom), Haunter

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3089,7 +3089,6 @@
   "ExpressInfoLong": "(Crewmates):\\nAs the Express, you gain a small temporary speed boost after each task you complete.",
   "ExpressSpeed": "Increased Speed",
   "ExpressSpeedDur": "Increased Speed Duration",
-  "MinionBlindDuration": "Blind Duration",
   "NiceSwapper": "Swapper",
   "NiceSwapperInfo": "Swap players' votes",
   "NiceSwapperInfoLong": "(Crewmates):\\nAs the Swapper, you can use the command <b>/sw <color=#0000ff>[ID]</color></b> twice to choose 2 players. Those votes received by those 2 players will be swapped.\\nYou can see everyone's <color=#0000ff>ID</color>s next to their name.\\n\\nFor example, if 3 players voted red, and 5 players voted yellow, and you swap red and yellows' IDs, then red will receive 5 votes, and yellow will receive 3 votes.\\n\\nDue to technical difficulties, the Host's original vote will seem unchanged, but it's only visual, their vote will still get swapped.",
@@ -3377,6 +3376,26 @@
   "ImpostorsSurviveBombs": "<color=#ff1919>Impostors</color> survive bombs",
   "NukeRadius": "Nuke radius (12x is very large)",
   "NukeCooldown": "Nuke Cooldown",
+  "Minion": "Minion",
+  "MinionInfo": "Help the Impostors",
+  "MinionInfoLong": "(Impostors):\\nAs the Minion, you can protect someone (optimally a crewmate) to blind them for a few seconds.",
+  "MinionBlindDuration": "Blind Duration",
+  "Warden": "Warden",
+  "WardenInfo": "Boost the Crewmates",
+  "WardenInfoLong": "(Crewmates):\\nAs the Warden, you can protect someone (optimally a crewmate) to notify them about being in danger and to give them a temporary speed boost.",
+  "WardenNotify": "The Warden warns you that you're in danger!",
+  "Specter": "Specter",
+  "SpecterInfo": "Finish Tasks to Win!",
+  "SpecterInfoLong": "(Crewmates):\\nAs the Specter, you must finish all of your tasks to win! Depending on a setting, you may also end the game and win alone if you do so!",
+  "SnatchWin": "Snatches Win (Win With Winning Team if Off)",
+  "Haunter": "Haunter",
+  "HaunterInfo": "You're the Impostors' Worst Nightmare",
+  "HaunterInfoLong": "(Neutrals):\\nAs the Haunter, when you complete all of your tasks, a random living impostor's name will show in red to everyone in meetings. When you have 1 task left, all impostors will get an arrow pointing towards you, and if any of them come close to you, you lose this role.",
+  "Haunter1TaskLeft": "The Haunter has 1 task left! Go near them or you might be revealed!",
+  "HaunterRevealedYou": "Your team has been revealed by the Haunter!",
+  "HaunterFinishedTasks": "The Haunter completed all tasks, an impostor was revealed! (But it wasn't you)",
+  "HaunterStopped": "The Haunter was successfully stopped!",
+  "HaunterStoppedSelf": "An impostor came too close to you, your role was removed.",
   "MasochistKillMax": "Amount of attacks needed to win",
   "GuessMasochist": "You just tried to guess a Masochist!\\nThey're now one step closer to winning!\\n\\nDo not guess them again.",
   "MasochistKill": "You were attacked!",
@@ -3393,7 +3412,7 @@
   "RememberedFollower": "You remembered you were a Follower!",
   "RememberedAmnesiac": "You failed to remember your role.",
   "RememberedImpostor": "You remembered you were an Impostor!",
-  "RememberedCrewmate": "You remembered you were a crewmate!",
+  "RememberedCrewmate": "You remembered you were a Crewmate!",
   "RememberButtonText": "Remember",
   "IncompatibleNeutralMode": "If neutral is incompatible, turn into",
   "IncompatibleCrewmateMode": "If crewmate is incompatible, turn into",
