Fix Ghost role assignment

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3380,14 +3380,17 @@
   "MinionInfo": "Help the Impostors",
   "MinionInfoLong": "(Impostors):\\nAs the Minion, you can protect someone (optimally a crewmate) to blind them for a few seconds.",
   "MinionBlindDuration": "Blind Duration",
+  "Prefix.Minion": "Minion",
   "Warden": "Warden",
   "WardenInfo": "Boost the Crewmates",
   "WardenInfoLong": "(Crewmates):\\nAs the Warden, you can protect someone (optimally a crewmate) to notify them about being in danger and to give them a temporary speed boost.",
   "WardenNotify": "The Warden warns you that you're in danger!",
+  "Prefix.Warden": "Warden",
   "Specter": "Specter",
   "SpecterInfo": "Finish Tasks to Win!",
   "SpecterInfoLong": "(Crewmates):\\nAs the Specter, you must finish all of your tasks to win! Depending on a setting, you may also end the game and win alone if you do so!",
   "SnatchWin": "Snatches Win (Win With Winning Team if Off)",
+  "Prefix.Specter": "Specter",
   "Haunter": "Haunter",
   "HaunterInfo": "You're the Impostors' Worst Nightmare",
   "HaunterInfoLong": "(Neutrals):\\nAs the Haunter, when you complete all of your tasks, a random living impostor's name will show in red to everyone in meetings. When you have 1 task left, all impostors will get an arrow pointing towards you, and if any of them come close to you, you lose this role.",
@@ -3396,6 +3399,7 @@
   "HaunterFinishedTasks": "The Haunter completed all tasks, an impostor was revealed! (But it wasn't you)",
   "HaunterStopped": "The Haunter was successfully stopped!",
   "HaunterStoppedSelf": "An impostor came too close to you, your role was removed.",
+  "Prefix.Haunter": "Haunter",
   "MasochistKillMax": "Amount of attacks needed to win",
   "GuessMasochist": "You just tried to guess a Masochist!\\nThey're now one step closer to winning!\\n\\nDo not guess them again.",
   "MasochistKill": "You were attacked!",
