Add Circumvent (add-on), hide kill button for Amnesiac if remembering mode is by report

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1747,6 +1747,14 @@
   "DeadlyQuotaInfoLong": "(Add-ons):\\nDeadly Quota is an add-on that only impostors can get. The holder of this add-on will need to get a specified amount of kills (or more) to be able to win. If their win condition triggers before getting a required amount of kills, the player loses even if they were supposed to win.",
   "DQNumOfKillsNeeded": "Minimum number of Kills required",
   "Prefix.DeadlyQuota": "Deadly Quota",
+  "Circumvent": "Circumvent",
+  "CircumventInfo": "You can't vent",
+  "CircumventInfoLong": "(Add-ons):\\nCircumvent is an add-on that only impostors can get. The holder of this add-on will not be able to use vents (or only limited times per game or round).",
+  "Prefix.Circumvent": "Circumvent",
+  "NoVenting": "Block Venting",
+  "VentLimit": "Vent Entering Limit",
+  "LimitPerGame": "Limit Per Game",
+  "LimitPerRounds": "Limit Per Rounds",
   "Damocles": "Damocles",
   "DamoclesInfo": "Everything changes your lifespan",
   "DamoclesInfoLong": "(Add-ons):\\nDamocles is an add-on that only impostors can get. The holder of this add-on will constantly have a timer displayed next to their role name. If the timer expires, the holder dies. The timer stops during meetings. Below is a list of what increases your time and what lowers your suicide timer:\\n\\n<size=80%>[<color=#00ff00><b>+</b></color>] You, or another impostor or madmate kills\\n[<color=#00ff00><b>+</b></color>] Entering a vent you didn't enter this round yet\\n[<color=#00ff00><b>+</b></color>] Surviving a meeting\\n[<color=#00ff00><b>+</b></color>] A player not on your team gets ejected\\n[<color=#ff0000><b>-</b></color>] Fixing a sabotage\\n[<color=#ff0000><b>-</b></color>] An impostor or a madmate dies\\n[<color=#ff0000><b>-</b></color>] Reporting a dead body or calling a meeting\\n[<color=#ff0000><b>-</b></color>] A player on your team gets ejected</size>",
@@ -3058,6 +3066,7 @@
   "LibrarianSilenceMode": "<color=#ff1919>Silence</color>",
   "LibrarianNormalMode": "Normal",
   "CanKillWhileShifted": "Can Kill While Shapeshifting",
+  "Shapeshift": "Shapeshift",
   "Postman": "Postman",
   "PostmanInfo": "Deliver Mail to Everyone!",
   "PostmanInfoLong": "(Neutral):\\nAs the Postman, your job is to deliver mail to everyone. You'll always have a target, and you need to click your kill button on that target to deliver the mail to them. When you've delivered mail to everyone, your win condition is satisfied. You'll win with the winning team, no matter what happens.",
