Fix a lot of stuff

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1716,8 +1716,8 @@
   "RomanticProtectCooldown": "Protect Cooldown",
   "RomanticBetPlayer": "You picked your partner",
   "RomanticBetOnYou": "The Romantic chose you as their Partner!",
-  "VengefulKCD": "<color=#8B0000>Vengeful Romantic</color> Kill Cooldown",
-  "VengefulCanVent": "<color=#8B0000>Vengeful Romantic</color> Can Vent",
+  "VengefulKCD": "<color=#ba2749>Vengeful Romantic</color> Kill Cooldown",
+  "VengefulCanVent": "<color=#ba2749>Vengeful Romantic</color> Can Vent",
   "RuthlessKCD": "<color=#D2691E>Ruthless Romantic</color> Kill Cooldown",
   "RuthlessCanVent": "<color=#D2691E>Ruthless Romantic</color> Can Vent",
   "VengefulRomanticKillButtonText": "Avenge",
@@ -2071,28 +2071,28 @@
   "ERR-000-804-1": "EHR does not support the Vanilla HnS, so unloaded.",
   "ERR-001-000-3": "Main dictionary has duplicated keys.",
   "DeathCommand": "<#ffffff>You were killed by </color>{0}<#ffffff>\\nTheir role is </color>{1}",
-  "DefaultSystemMessageTitle": "[ ★ System message ★ ]",
-  "MessageFromTheHost": "[ ★ Host message ★ ]",
-  "SayTitle": "[ ★ Moderator message ★ ]",
-  "MessageFromEAC": "[ ★ EAC ★ ]",
-  "DetectiveNoticeTitle": "[ ★ Message for the Detective ★ ]",
-  "GuessKillTitle": "[ ★ Message about Guessing ★ ]",
-  "CyberStarNewsTitle": "[ ★ Urgent news ★ ]",
-  "GodAliveTitle": "[ ★ Message about God ★ ]",
-  "WorkaholicAliveTitle": "[ ★ Message about Workaholic ★ ]",
-  "BaitAliveTitle": "[ ★ Message about Bait ★ ]",
-  "MessageFromKPD": "[ ★ KARPED1EM ★ ]",
-  "MessageFromSponsor": "[ ★ Sponsor ★ ]",
-  "MessageFromDev": "[ ★ Developer ★ ]",
-  "DivinatorCheckMsgTitle": "[ ★ Crystal Ball ★ ]",
-  "MimicMsgTitle": "[ ★ Mimic ★ ]",
-  "EraserEraseMsgTitle": "[ ★ Eraser ★ ]",
+  "DefaultSystemMessageTitle": "★ System message ★",
+  "MessageFromTheHost": "★ Host message ★",
+  "SayTitle": "★ Moderator message ★",
+  "MessageFromEAC": "★ EAC ★",
+  "DetectiveNoticeTitle": "★ Message for the Detective ★",
+  "GuessKillTitle": "★ Message about Guessing ★",
+  "CyberStarNewsTitle": "★ Urgent news ★",
+  "GodAliveTitle": "★ Message about God ★",
+  "WorkaholicAliveTitle": "★ Message about Workaholic ★",
+  "BaitAliveTitle": "★ Message about Bait ★",
+  "MessageFromKPD": "★ KARPED1EM ★",
+  "MessageFromSponsor": "★ Sponsor ★",
+  "MessageFromDev": "★ Developer ★",
+  "DivinatorCheckMsgTitle": "★ Crystal Ball ★",
+  "MimicMsgTitle": "★ Mimic ★",
+  "EraserEraseMsgTitle": "★ Eraser ★",
   "TrialKillTitle": "[★ Court ★]",
   "MorticianCheckTitle": "[★ Corpse Examination ★]",
   "MediumshipTitle": "[★ Voice of the Underworld ★]",
-  "MafiaRevengeTitle": "[ ★ NEWS ★ ]",
-  "RetributionistRevengeTitle": "[ ★ NEWS ★ ]",
-  "TrackerTitle": "[ ★ Track Reading ★ ]",
+  "MafiaRevengeTitle": "★ NEWS ★",
+  "RetributionistRevengeTitle": "★ NEWS ★",
+  "TrackerTitle": "★ Track Reading ★",
   "Temp.Blank": "​",
   "TabGroup.SystemSettings": "System Settings",
   "TabGroup.GameSettings": "Game Settings",
