--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3287,8 +3287,14 @@
   "CommanderInfoLong": "(Impostors):\\nAs the Commander, you can switch between 2 modes by venting: Whistle and Mark. You can execute the selected action by shapeshifting/petting your pet.\\n\\nMark: Marks your shapeshift target with a unique color visible to all impostors. Use this to command them to kill that player!\\n\\nWhistle: This tells all impostors to come to you and gives them each an arrow pointing towards you.",
   "CommanderNotify": "The Commander wants you to meet with them",
   "CommanderTarget": "<size=1.7>Commander's target</color>",
+  "CommanderDontKill": "<size=1.7>Don't kill this player</color>",
+  "CommanderKillAnyoneNotify": "Commander wants you to kill anyone",
+  "CommanderDontSabotageNotify": "Commander wants you to not sabotage",
   "CommanderWhistleMode": "Whistle",
   "CommanderMarkMode": "Mark Target",
+  "CommanderDontKillMarkMode": "Mark a Player to Leave Alive",
+  "CommanderDontSabotageMode": "Command to Not Sabotage",
+  "CommanderKillAnyoneModeInfo": "Command to Kill Anyone",
   "CannotSpawnAsSoloImp": "Cannot Spawn as Solo Impostor",
   "EnableExtraAbility": "Enable Extra Ability",
   "CanOnlyUseWhileAnyWatch": "Can Only Use Ability When There is a Device Usage Alert",
