Automate Ability Use Gains, Improve Commander, Fix bugs

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2566,6 +2566,7 @@
   "SwiftclawDashDur": "Dash Duration",
   "SwiftclawDashSpeed": "Speed During Dash",
   "SwiftclawDashCD": "Dash Cooldown",
+  "SwiftclawKillButtonText": "Dash",
   "Cantankerous": "Cantankerous",
   "CantankerousInfo": "Eject Crewmates to Kill",
   "CantankerousInfoLong": "(Impostors):\\nAs the Cantankerous, you can only kill if you have a point. You gain points if a non-impostor player gets ejected.",
@@ -3290,10 +3291,12 @@
   "CommanderDontKill": "<size=1.7>Don't kill this player</color>",
   "CommanderKillAnyoneNotify": "Commander wants you to kill anyone",
   "CommanderDontSabotageNotify": "Commander wants you to not sabotage",
+  "CommanderUseAbilityNotify": "Commander wants you to use your ability",
   "CommanderWhistleMode": "Whistle",
   "CommanderMarkMode": "Mark Target",
   "CommanderDontKillMarkMode": "Mark a Player to Leave Alive",
   "CommanderDontSabotageMode": "Command to Not Sabotage",
+  "CommanderUseAbilityMode": "Command to Use Ability",
   "CommanderKillAnyoneModeInfo": "Command to Kill Anyone",
   "CannotSpawnAsSoloImp": "Cannot Spawn as Solo Impostor",
   "EnableExtraAbility": "Enable Extra Ability",
