Fix Lovers & Improve Commander (again)

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3289,15 +3289,17 @@
   "CommanderNotify": "The Commander wants you to meet with them",
   "CommanderTarget": "<size=1.7>Commander's target</color>",
   "CommanderDontKill": "<size=1.7>Don't kill this player</color>",
+  "CommanderWhistling": "Whistling",
   "CommanderKillAnyoneNotify": "Commander wants you to kill anyone",
   "CommanderDontSabotageNotify": "Commander wants you to not sabotage",
   "CommanderUseAbilityNotify": "Commander wants you to use your ability",
+  "CommanderDontKillAnyoneNotify": "Commander wants you to not kill",
   "CommanderWhistleMode": "Whistle",
   "CommanderMarkMode": "Mark Target",
   "CommanderDontKillMarkMode": "Mark a Player to Leave Alive",
   "CommanderDontSabotageMode": "Command to Not Sabotage",
   "CommanderUseAbilityMode": "Command to Use Ability",
-  "CommanderKillAnyoneModeInfo": "Command to Kill Anyone",
+  "CommanderKillAnyoneMode": "Command to Kill Anyone",
   "CannotSpawnAsSoloImp": "Cannot Spawn as Solo Impostor",
   "EnableExtraAbility": "Enable Extra Ability",
   "CanOnlyUseWhileAnyWatch": "Can Only Use Ability When There is a Device Usage Alert",
