Fix bugs, Blackmailer => Silencer

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3144,14 +3144,14 @@
   "SpyInfo": "You know who interacts with you",
   "SpyInfoLong": "(Crewmates):\\nAs the Spy, when someone uses their kill button on you (any ability that is used through the kill button), you'll see their name in orange for a few seconds.\\nNote: If a Crewmate used their ability on you, you'll also see them with an orange name!\\nNote: If you have no ability uses left, you won't see orange names at all!",
   "SpyRedNameDur": "Colored Name Duration",
-  "Blackmailer": "Blackmailer",
-  "BlackmailerInfo": "Shapeshift to Silence Players",
-  "BlackmailerInfoLong": "(Impostors):\\nAs the Blackmailer, when you shift into a target you will blackmail that player, and the blackmailed player cannot speak.\\n\\nSpeaking by the blackmailed player will trigger the confusion command, please do not speak when the blackmailed player sees his icon.",
-  "BlackmailerDead": "<b>{0}</b> has been blackmailed by a <color=#ff1919>Blackmailer</color>!",
-  "BlackmaileKillTitle": "<color=#ffff00>WARNING</color>",
-  "BlackmailerShutUp": "Shush! You'll die if you keep talking.",
-  "BlackmailerMax": "Maximum times blackmailed players may speak",
-  "BlackmailerSkillCooldown": "Ability Cooldown",
+  "Silencer": "Silencer",
+  "SilencerInfo": "Shapeshift to Silence Players",
+  "SilencerInfoLong": "(Impostors):\\nAs the Silencer, when you shift into a target you will blackmail that player, and the blackmailed player cannot speak.\\n\\nSpeaking by the blackmailed player will trigger the confusion command, please do not speak when the blackmailed player sees his icon.",
+  "SilencerDead": "<b>{0}</b> has been blackmailed by a <color=#ff1919>Silencer</color>!",
+  "SilencerKillTitle": "<color=#ffff00>WARNING</color>",
+  "SilencerShutUp": "Shush! You'll die if you keep talking.",
+  "SilencerMax": "Maximum times blackmailed players may speak",
+  "SilencerSkillCooldown": "Ability Cooldown",
   "Doppelganger": "Doppelganger",
   "DoppelgangerInfo": "Steal The Identify of Your Target",
   "DoppelgangerInfoLong": "(Neutrals):\\nAs the Doppelganger, use your kill button to steal a player's identity (their name and skin) and then kill your target.\\n\\nKill everyone to win.\\n\\nNote:- You can not steal the identity of the target when Camouflage is active.",
