--- a/Resources/Lang/pt_BR.json
+++ b/Resources/Lang/pt_BR.json
@@ -3036,13 +3036,13 @@
   "SpyInfo": "Você sabe quem interage com você",
   "SpyInfoLong": "(Tripulantes):\\nComo Espião, quando alguém usar seu botão de abate em você (qualquer habilidade usada através do botão de abate), você verá o nome do jogador em laranja por alguns poucos segundos.\\nNota: Se um Tripulante usar a habilidade dele em você, você também verá o nome dele laranja!\\nNota: Se você não tiver mais usos de habilidade restantes, você não verá os nomes laranjas!",
   "SpyRedNameDur": "Duração do nome colorido",
-  "Blackmailer": "Silenciador",
-  "BlackmailerInfo": "Silencie os Jogadores",
-  "BlackmailerInfoLong": "(Impostores):\\nComo Sileniciador, quando você se transformar em um alvo, você silenciará esse jogador, e o jogador silenciado não poderá falar.\\n\\nA fala do jogador silenciado acionará o comando de confusão, portanto, não fale quando o jogador silenciado ver seu ícone!",
-  "BlackmailerDead": "Aviso: <b>{0}</b> foi silenciado por um <color=#ff1919>Silenciador</color>.",
-  "BlackmaileKillTitle": "<color=#ffff00>AVISO</color>",
-  "BlackmailerShutUp": "Silêncio! Você vai morrer se continuar falando.",
-  "BlackmailerMax": "Máximo de vezes que os jogadores silenciados podem falar",
+  "Silencer": "Silenciador",
+  "SilencerInfo": "Silencie os Jogadores",
+  "SilencerInfoLong": "(Impostores):\\nComo Sileniciador, quando você se transformar em um alvo, você silenciará esse jogador, e o jogador silenciado não poderá falar.\\n\\nA fala do jogador silenciado acionará o comando de confusão, portanto, não fale quando o jogador silenciado ver seu ícone!",
+  "SilencerDead": "Aviso: <b>{0}</b> foi silenciado por um <color=#ff1919>Silenciador</color>.",
+  "SilencerKillTitle": "<color=#ffff00>AVISO</color>",
+  "SilencerShutUp": "Silêncio! Você vai morrer se continuar falando.",
+  "SilencerMax": "Máximo de vezes que os jogadores silenciados podem falar",
   "Doppelganger": "Sósia",
   "DoppelgangerInfo": "Roube a identidade de seu alvo",
   "DoppelgangerInfoLong": "(Neutros):\\nComo Sósia, use o botão de matar para roubar a identidade de um jogador (nome e skin) e, em seguida, mate seu alvo.\\n\\nMate todos para vencer.\\n\\nObservação: Você não pode roubar a identidade do alvo quando a Camuflagem estiver ativa.",
