Blackmailer fr - not that.... whatever that was

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2492,6 +2492,9 @@
   "RandomizerNotifyOpt": "Notify When RNG Event Happens (turn off if events are frequent)",
   "MadmateCanFindMarshall": "Reveal to <#ff1919>MadMates</color>",
   "DoesntSpawnOnFungle": "Doesn't Spawn When the Map is <color=#ffa646>Fungle</color>",
+  "Blackmailer": "Blackmailer",
+  "BlackmailerInfo": "Blackmail Players",
+  "BlackmailerInfoLong": "(Impostors):\\nAs the Blackmailer, you can blackmail players by clicking your kill button once on them. Blackmailed players' votes will be forced to be the same as your vote. Double click to kill normally.",
   "DGRM.None": "None",
   "DGRM.OnMeeting": "On Meeting",
   "DGRM.AfterTime": "Timer",
