Add this asoiutepuoiwbt

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1586,6 +1586,7 @@
   "VirusKnowTargetRole": "Know <color=#2E8B57>Contagious</color> Player's Role",
   "VirusTargetKnowOtherTarget": "<color=#2E8B57>Contagious</color> players know each other",
   "VirusKillInfectedPlayerAfterMeeting": "<color=#2E8B57>Contagious</color> player dies after meeting",
+  "ContagiousPlayersCanKillEachOther": "<color=#2E8B57>Contagious</color> players can kill each other",
   "CharmedCountMode": "<color=#cf6acd>Charmed</color> players count as",
   "CharmedCountMode.None": "Nothing",
   "CharmedCountMode.Succubus": "<color=#cf6acd>Cultist</color>",
@@ -1850,6 +1851,7 @@
   "GuessMonarch": "You're knighted, so you cannot guess the Monarch.",
   "GuessShielded": "Sorry, you can't guess the player who is shielded by Medic",
   "MayorRevealWhenDoneTasks": "<color=#204d42>Mayor</color> is revealed to everyone on task completion",
+  "MayorSeesVoteColorsWhenDoneTasks": "<color=#204d42>Mayor</color> sees vote colors on task completion",
   "JudgeDead": "Sorry, you can't trial after death.",
   "JudgeTrialMax": "\\nNo more trials left!",
   "LaughToWhoTrialSelf": "God, I didn't think the Judges would be so blind that they wouldn't even see that they had sentenced themselves.",
