Fix bugs, Optimize settings menu, New Executioner roles to change to

--- a/Resources/Lang/pt_BR.json
+++ b/Resources/Lang/pt_BR.json
@@ -87,12 +87,12 @@
   "GuardianAngel": "Anjo da Guarda",
   "Impostor": "Impostor",
   "Shapeshifter": "Metamorfo",
-  "EngineerTOHE": "Engenheiro",
-  "ScientistTOHE": "Cientista",
-  "ShapeshifterTOHE": "Metamorfo",
-  "GuardianAngelTOHE": "Anjo da Guarda",
-  "ImpostorTOHE": "Impostor",
-  "CrewmateTOHE": "Tripulante",
+  "EngineerEHR": "Engenheiro",
+  "ScientistEHR": "Cientista",
+  "ShapeshifterEHR": "Metamorfo",
+  "GuardianAngelEHR": "Anjo da Guarda",
+  "ImpostorEHR": "Impostor",
+  "CrewmateEHR": "Tripulante",
   "BountyHunter": "Caçador de Recompensas",
   "Mare": "Pesadelo",
   "FireWorks": "Artilheiro",
@@ -374,12 +374,12 @@
   "Prefix.Sunglasses": "Óculos de Sol",
   "Prefix.Mare": "Pesadelo",
   "BracketAddons": "Adicionar parênteses para Atributos",
-  "EngineerTOHEInfo": "Use ventilações para encontrar os <color=#ff1919>Impostores</color>",
-  "ScientistTOHEInfo": "Acesse vitais portáveis de qualquer lugar",
-  "ShapeshifterTOHEInfo": "Disfarce-se de Tripulantes para confundi-los",
-  "GuardianAngelTOHEInfo": "Proteja os Tripulantes dos <color=#ff1919>Impostores</color>",
-  "ImpostorTOHEInfo": "Sabote e mate todos",
-  "CrewmateTOHEInfo": "Faça suas tarefas",
+  "EngineerEHRInfo": "Use ventilações para encontrar os <color=#ff1919>Impostores</color>",
+  "ScientistEHRInfo": "Acesse vitais portáveis de qualquer lugar",
+  "ShapeshifterEHRInfo": "Disfarce-se de Tripulantes para confundi-los",
+  "GuardianAngelEHRInfo": "Proteja os Tripulantes dos <color=#ff1919>Impostores</color>",
+  "ImpostorEHRInfo": "Sabote e mate todos",
+  "CrewmateEHRInfo": "Faça suas tarefas",
   "BountyHunterInfo": "Elimine seu alvo",
   "MareInfo": "Mate na escuridão",
   "FireWorksInfo": "Use explosivos a seu favor",
@@ -608,12 +608,12 @@
   "SunnyboyInfo": "Brilhe, brilhe meu brilho de sol!",
   "BardInfo": "A graça do poema, o rastro do assassinato, uma dança rítmica em um abraço sombrio",
   "NukerInfo": "Metamorfe-se para explodir todos",
-  "EngineerTOHEInfoLong": "(Tripulantes):\\n★Como um Engenheiro, você pode acessar as tubulações enquanto as comunicações não são sabotadas.",
-  "ScientistTOHEInfoLong": "(Tripulantes):\\nComo um Cientista, você tem um tablet portátil com os dados vitais da Tripulação.\\nUse-o da maneira que quiser.",
-  "ShapeshifterTOHEInfoLong": "(Impostores):★Como um Metamorfo, você tem uma habilidade de metamorfose que pode usar para incriminar outros Tripulantes.\\n★Apenas esteja ciente de que há um casulo durante a mudança e o disfarce é temporário.",
-  "GuardianAngelTOHEInfoLong": "(Tripulantes):★O Anjo Guardião, você aparece como um fantasma e deve fazer o seu trabalho protegendo os Tripulantes dos Impostores.",
-  "ImpostorTOHEInfoLong": "(Impostores):\\n★Como um Impostor, seu objetivo é simplesmente matar os Tripulantes.\\n★Você pode sabotar e usar os dutos.",
-  "CrewmateTOHEInfoLong": "(Tripulantes):\\n★Como um Tripulante, seu objetivo é bem simples. Descubra e expulse os Impostores. ★Tripulantes ganham se livrando de todos os assassinos ou terminando todas as suas tarefas.",
+  "EngineerEHRInfoLong": "(Tripulantes):\\n★Como um Engenheiro, você pode acessar as tubulações enquanto as comunicações não são sabotadas.",
+  "ScientistEHRInfoLong": "(Tripulantes):\\nComo um Cientista, você tem um tablet portátil com os dados vitais da Tripulação.\\nUse-o da maneira que quiser.",
+  "ShapeshifterEHRInfoLong": "(Impostores):★Como um Metamorfo, você tem uma habilidade de metamorfose que pode usar para incriminar outros Tripulantes.\\n★Apenas esteja ciente de que há um casulo durante a mudança e o disfarce é temporário.",
+  "GuardianAngelEHRInfoLong": "(Tripulantes):★O Anjo Guardião, você aparece como um fantasma e deve fazer o seu trabalho protegendo os Tripulantes dos Impostores.",
+  "ImpostorEHRInfoLong": "(Impostores):\\n★Como um Impostor, seu objetivo é simplesmente matar os Tripulantes.\\n★Você pode sabotar e usar os dutos.",
+  "CrewmateEHRInfoLong": "(Tripulantes):\\n★Como um Tripulante, seu objetivo é bem simples. Descubra e expulse os Impostores. ★Tripulantes ganham se livrando de todos os assassinos ou terminando todas as suas tarefas.",
   "BountyHunterInfoLong": "(Impostores):\\n★Você tem um alvo para matar. Se conseguir eliminar o seu alvo, o seu próximo tempo de espera para matar será reduzido.\\n★Porém, se você matar alguém que não seja o seu alvo designado, o seu próximo tempo de espera para matar será aumentado.\\n★ O alvo é trocado após um certo período de tempo.",
   "FireWorksInfoLong": "(Impostores):\\n★O Artilheiro pode colocar bombas de fogos de artifício para causar danos à área. \\n★O Artilheiro pode plantar até três bombas de fogos de artifício usando metamorfose. Quando apenas o Artilheiro resta no time dos Impostores, as bombas de fogos de artifício são colocadas. O Artilheiro pode usar metamorfose para colocar a bomba. A bomba do Artilheiro pode matar ele mesmo. \\n★No entanto, se as bombas de fogos de artifício matarem todos os jogadores sobreviventes, será considerada uma vitória para os Impostores.",
   "SerialKillerInfoLong": "(Impostores):\\n★Você possui um tempo de matar menor em comparação com os outros Impostores, mas há uma condição: se você não matar ninguém até o final do seu tempo de metamorfose, você morrerá.",
@@ -2305,11 +2305,11 @@
   "turnOn": "Ligado",
   "turnOff": "Desligado",
   "CancelStartCountDown": "A contagem para começar o jogo foi cancelada",
-  "RestTOHESetting": "Configurações EHR restauradas ao padrão",
+  "RestEHRSetting": "Configurações EHR restauradas ao padrão",
   "FPSSetTo": "FPS definido para: {0}",
   "HostKillSelfByCommand": "O anfitrião da sala decidiu cometer suicídio.",
   "SyncCustomSettingsRPC": "RPC Sincronizado",
-  "TOHEVisitorCount": "Até agora o EHR foi usado <color={0}>{1}</color> vezes~",
+  "EHRVisitorCount": "Até agora o EHR foi usado <color={0}>{1}</color> vezes~",
   "Mode": "Modo",
   "Target": "Alvo",
   "PlayerInfo": "Informações do Jogador",
@@ -2326,7 +2326,7 @@
   "KBTimeRemain": "<color=#00ffa5>Tempo Restante:</color> <b>{0}</b>s",
   "ResetDoorsEveryTurns": "Redefinir Portas Após Reunião (<color=#ed0007>Airship</color>/<color=#a167c0>Polus</color>/<color=#ffa646>Fungle</color>)",
   "GameOver": "Fim de Jogo",
-  "TOHEOptions": "Opções EHR",
+  "EHROptions": "Opções EHR",
   "Cancel": "Cancelar",
   "Back": "Voltar",
   "Yes": "Sim",
