--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -87,12 +87,12 @@
   "GuardianAngel": "Guardian Angel",
   "Impostor": "Impostor",
   "Shapeshifter": "Shapeshifter",
-  "EngineerTOHE": "Engineer",
-  "ScientistTOHE": "Scientist",
-  "ShapeshifterTOHE": "Shapeshifter",
-  "GuardianAngelTOHE": "Guardian Angel",
-  "ImpostorTOHE": "Impostor",
-  "CrewmateTOHE": "Crewmate",
+  "EngineerEHR": "Engineer",
+  "ScientistEHR": "Scientist",
+  "ShapeshifterEHR": "Shapeshifter",
+  "GuardianAngelEHR": "Guardian Angel",
+  "ImpostorEHR": "Impostor",
+  "CrewmateEHR": "Crewmate",
   "BountyHunter": "Bounty Hunter",
   "Mare": "Mare",
   "FireWorks": "Fireworker",
@@ -374,12 +374,12 @@
   "Prefix.Sunglasses": "Sunglasses",
   "Prefix.Mare": "Mare",
   "BracketAddons": "Add Brackets To Add-ons",
-  "EngineerTOHEInfo": "Use the vents to catch the <color=#ff1919>Impostors</color>",
-  "ScientistTOHEInfo": "Access portable vitals from anywhere",
-  "ShapeshifterTOHEInfo": "Disguise as crewmates to frame them",
-  "GuardianAngelTOHEInfo": "Protect the crewmates from the <color=#ff1919>Impostors</color>",
-  "ImpostorTOHEInfo": "Kill and sabotage",
-  "CrewmateTOHEInfo": "Do your tasks",
+  "EngineerEHRInfo": "Use the vents to catch the <color=#ff1919>Impostors</color>",
+  "ScientistEHRInfo": "Access portable vitals from anywhere",
+  "ShapeshifterEHRInfo": "Disguise as crewmates to frame them",
+  "GuardianAngelEHRInfo": "Protect the crewmates from the <color=#ff1919>Impostors</color>",
+  "ImpostorEHRInfo": "Kill and sabotage",
+  "CrewmateEHRInfo": "Do your tasks",
   "BountyHunterInfo": "Eliminate your target",
   "MareInfo": "Kill in the dark",
   "FireWorksInfo": "Go out with a BANG",
@@ -608,12 +608,12 @@
   "SunnyboyInfo": "Shine, shine my sunshine!",
   "BardInfo": "Poem's grace, murder's trace, a rhythmic dance in dark embrace.",
   "NukerInfo": "Shapeshift to nuke everyone",
-  "EngineerTOHEInfoLong": "(Crewmates):\\nAs the Engineer, you may access the vents while comms are not sabotaged.\\nVents are disabled when they are sabotaged.",
-  "ScientistTOHEInfoLong": "(Crewmates):\\nAs the Scientist, you have a portable tablet with the crew's vitals on it.\\nUse this any way you'd like.\\nCatching self-reports, extra intel on body age, etc.",
-  "ShapeshifterTOHEInfoLong": "(Impostors):\\nAs the Shapeshifter, you have a shapeshifting ability which you may use to frame other crewmates.\\nJust be aware that there is an egg while shifting and the disguise is temporary.",
-  "GuardianAngelTOHEInfoLong": "(Crewmates):\\nAs the Guardian Angel, you spawn as a ghost and must do your job by protecting crewmates from the Impostors.",
-  "ImpostorTOHEInfoLong": "(Impostors):\\nAs the Impostor, your goal is to simply kill off the crewmates.\\nYou can sabotage and vent.",
-  "CrewmateTOHEInfoLong": "(Crewmates):\\nAs the Crewmate, your goal is quite simple. Find and exile the Impostors.\\n\\nCrewmates win by getting rid of all killers or by finishing all their tasks.",
+  "EngineerEHRInfoLong": "(Crewmates):\\nAs the Engineer, you may access the vents while comms are not sabotaged.\\nVents are disabled when they are sabotaged.",
+  "ScientistEHRInfoLong": "(Crewmates):\\nAs the Scientist, you have a portable tablet with the crew's vitals on it.\\nUse this any way you'd like.\\nCatching self-reports, extra intel on body age, etc.",
+  "ShapeshifterEHRInfoLong": "(Impostors):\\nAs the Shapeshifter, you have a shapeshifting ability which you may use to frame other crewmates.\\nJust be aware that there is an egg while shifting and the disguise is temporary.",
+  "GuardianAngelEHRInfoLong": "(Crewmates):\\nAs the Guardian Angel, you spawn as a ghost and must do your job by protecting crewmates from the Impostors.",
+  "ImpostorEHRInfoLong": "(Impostors):\\nAs the Impostor, your goal is to simply kill off the crewmates.\\nYou can sabotage and vent.",
+  "CrewmateEHRInfoLong": "(Crewmates):\\nAs the Crewmate, your goal is quite simple. Find and exile the Impostors.\\n\\nCrewmates win by getting rid of all killers or by finishing all their tasks.",
   "BountyHunterInfoLong": "(Impostors):\\nIf you successfully eliminate your assigned target, your next kill cooldown will be reduced, but if you eliminate anyone else, your next kill cooldown will be lengthened; the target will switch after a predetermined time.",
   "FireWorksInfoLong": "(Impostors):\\nAs a Fireworker, you can plant up to three firework bombs using shapeshift/by petting your pet. If you're the last impostor standing, you can use shapeshift/pet to detonate the bombs and cause area damage. But be careful, the bombs can also harm you. If the bombs eliminate all surviving players, it's a victory for the impostors.",
   "SerialKillerInfoLong": "(Impostors):\\nYou have a shorter kill cooldown than other impostors, but you will die if you don't kill before the end of your shapeshift cooldown.",
@@ -2310,11 +2310,11 @@
   "turnOn": "On",
   "turnOff": "Off",
   "CancelStartCountDown": "The starting countdown was cancelled",
-  "RestTOHESetting": "EHR settings have been restored to default",
+  "RestEHRSetting": "EHR settings have been restored to default",
   "FPSSetTo": "FPS Set To: {0}",
   "HostKillSelfByCommand": "The lobby Host decided to commit suicide",
   "SyncCustomSettingsRPC": "Synchronized RPC",
-  "TOHEVisitorCount": "To date EHR has been used <color={0}>{1}</color> times~",
+  "EHRVisitorCount": "To date EHR has been used <color={0}>{1}</color> times~",
   "Mode": "Mode",
   "Target": "Target",
   "PlayerInfo": "Player Info",
@@ -2331,7 +2331,7 @@
   "KBTimeRemain": "<color=#00ffa5>Time Remaining:</color> <b>{0}</b>s",
   "ResetDoorsEveryTurns": "Reset All Doors After Meetings",
   "GameOver": "Game Over",
-  "TOHEOptions": "EHR Options",
+  "EHROptions": "EHR Options",
   "Cancel": "Cancel",
   "Back": "Back",
   "Yes": "Yes",
@@ -2799,7 +2799,7 @@
   "ElectricInfoLong": "(Crewmates):\\nAs the Electric, when you complete a task, a random killer gets frozen for a few seconds.",
   "Mole": "Mole",
   "MoleInfo": "TP to Random Vents by Entering One",
-  "MoleInfoLong": "(Crewmates):\\nAs the Mole, when you vent, you get kicked out and teleport to a random vent on the map.",
+  "MoleInfoLong": "(Crewmates):\\nAs the Mole, when you vent, you get kicked out and teleport to a random vent on the map. / Pet your pet to teleport to a random vent.",
   "Tornado": "Tornado",
   "TornadoInfo": "Spawn Tornados",
   "TornadoInfoLong": "(Crewmates):\\nAs the Tornado, you can spawn tornados by petting your pet. When someone walks close to a tornado, they fly (teleport) to a random place on the ship.",
