More settings & Optimize & A little something for April Fools :) HF

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2892,6 +2892,9 @@
   "WhackAMole": "Whack-A-Mole",
   "SpawnAdditionalRefugeeOnImpsDead": "Random <#8cffff>Crewmate</color> Turns To <#ff1919>Renegade</color> When All <#ff1919>Impostors</color> Die",
   "SpawnAdditionalRefugeeWhenNKAlive": "Spawn Even If a <#ffab1b>Neutral Killer</color> is Alive",
+  "SpawnAdditionalRefugeeMinAlivePlayers": "Minimum Number of Alive Players to Spawn",
+  "HorseMode": "Horse Mode",
+  "LongMode": "Long Mode",
   "NoPetActionMsg1": "You just ate a cookie",
   "NoPetActionMsg2": "You look around",
   "NoPetActionMsg3": "You start wondering whether you are sus or not",
