--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3132,6 +3132,14 @@
   "AdventurerIngredientsDisplay": "{0}: {1}\\nVent to craft this weapon / Pet to cycle to next weapon",
   "AdventurerWeaponCrafted": "Crafted Weapon: {0}",
   "AdventurerFound": "Found Resource: {0}",
+  "AdventurerGun.Gun": "Gun",
+  "AdventurerGun.Shield": "Shield",
+  "AdventurerGun.Lantern": "Lantern",
+  "AdventurerGun.Portal": "Portal",
+  "AdventurerGun.Wrench": "Wrench",
+  "AdventurerGun.Proxy": "Proxy",
+  "AdventurerGun.Prediction": "Prediction",
+  "AdventurerGun.RNG": "RNG",
   "Imitator": "Imitator",
   "ImitatorInfo": "Your kill cooldown shifts",
   "ImitatorInfoLong": "(Neutral):\\nAs the Imitator, your kill cooldown is different after every even numbered kill and every odd numbered kill of yours. You have a separate cooldown after meetings. Your first kill after every meeting will set your cooldown to the Even-Numbered Kill Cooldown, your second kill will set it to the Odd-Numbered Kill Cooldown, and the process repeats until a meeting is called again.",
